# pitch-control-delay-plugin

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
resource/: au-info.plist  editor.uidesc
scripts/mac/: build_release.sh
source/: cids.h  controller.cpp  controller.h  entry.cpp  processor.cpp  processor.h  version.h
